[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oase-fm"
version = "0.2.2"
description = "Local Python control for the OASE InScenio FM-Master EGC"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["cryptography>=41"]

[project.urls]
Homepage = "https://github.com/berkinet/oase-fm"
Repository = "https://github.com/berkinet/oase-fm"

[project.scripts]
oase-control = "oase_fm:main"

[tool.setuptools]
py-modules = ["oase_fm"]
